@@ -1193,6 +1193,22 @@ argument_list|)
 decl_stmt|;
 if|if
 condition|(
+name|norms
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+operator|new
+name|byte
+index|[
+literal|0
+index|]
+return|;
+comment|// todo a static final zero length attribute?
+block|}
+if|if
+condition|(
 name|updatedNormsByFieldNameAndDocumentNumber
 operator|!=
 literal|null
@@ -1284,6 +1300,15 @@ argument_list|(
 name|field
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|norms
+operator|==
+literal|null
+condition|)
+block|{
+return|return;
+block|}
 name|System
 operator|.
 name|arraycopy
