@@ -33,6 +33,58 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|index
+operator|.
+name|IndexReader
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|IndexWriter
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|Term
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|TermEnum
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|search
 operator|.
 name|IndexSearcher
@@ -72,58 +124,6 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|index
-operator|.
-name|IndexReader
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|Term
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|TermEnum
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|IndexWriter
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
 name|store
 operator|.
 name|Directory
@@ -140,6 +140,24 @@ operator|.
 name|store
 operator|.
 name|RAMDirectory
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Arrays
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
 import|;
 end_import
 begin_class
@@ -236,6 +254,186 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+block|}
+DECL|method|testNorms
+specifier|public
+name|void
+name|testNorms
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|InstantiatedIndex
+name|ii
+init|=
+operator|new
+name|InstantiatedIndex
+argument_list|()
+decl_stmt|;
+name|IndexReader
+name|r
+init|=
+operator|new
+name|InstantiatedIndexReader
+argument_list|(
+name|ii
+argument_list|)
+decl_stmt|;
+name|testNorms
+argument_list|(
+name|r
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|ii
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// make sure a Directory acts the same
+name|Directory
+name|d
+init|=
+operator|new
+name|RAMDirectory
+argument_list|()
+decl_stmt|;
+operator|new
+name|IndexWriter
+argument_list|(
+name|d
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|,
+name|IndexWriter
+operator|.
+name|MaxFieldLength
+operator|.
+name|UNLIMITED
+argument_list|)
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|r
+operator|=
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|d
+argument_list|)
+expr_stmt|;
+name|testNorms
+argument_list|(
+name|r
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|d
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+DECL|method|testNorms
+specifier|private
+name|void
+name|testNorms
+parameter_list|(
+name|IndexReader
+name|r
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|byte
+index|[]
+name|norms
+decl_stmt|;
+name|norms
+operator|=
+name|r
+operator|.
+name|norms
+argument_list|(
+literal|"foo"
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|norms
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|norms
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|norms
+operator|=
+operator|new
+name|byte
+index|[
+literal|10
+index|]
+expr_stmt|;
+name|Arrays
+operator|.
+name|fill
+argument_list|(
+name|norms
+argument_list|,
+operator|(
+name|byte
+operator|)
+literal|10
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|norms
+argument_list|(
+literal|"foo"
+argument_list|,
+name|norms
+argument_list|,
+literal|10
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|byte
+name|b
+range|:
+name|norms
+control|)
+block|{
+name|assertEquals
+argument_list|(
+operator|(
+name|byte
+operator|)
+literal|10
+argument_list|,
+name|b
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 DECL|method|testTermEnum
 specifier|public
